# gists

bash/autotools/: .gitignore  configure.ac  test.in
bash/environment-variables/: child  parent  peer1  peer2  sourced
cpp/boost/: Makefile  main.cc
cpp/boost-lexical-cast/: main.cc
cpp/boost_multi_index_container/: main.cc
cpp/cassandra/: Makefile  a.cc
cpp/chained-methods/: main.cc
cpp/custom_deleter/: Makefile  a.cpp
cpp/declarationless-constructor/: Makefile  main.cc
cpp/deriving-template/: a.cc
cpp/destructors/: main.cc
cpp/destructors-noexcept/: main.cc
cpp/dynamic-cast-this/: Makefile  a.cc
cpp/expressions/: main.cc
cpp/function-definition-check/: main.cc
cpp/getpwnam/: Makefile  core  main.cc
cpp/glob/: .gitignore  Makefile  main.cc  plot.gp
cpp/googletest/: Makefile  main.cc
cpp/header-object-inconsistency/: Makefile  mumbo-jumbo-virtual.cc  with-virtual.h  without-virtual.cc  without-virtual.h
cpp/ifs-vs-templates/: Makefile  main.cc
cpp/inline/: a.cc  a.h
cpp/int-bitwise/: main.cc
cpp/int-demotion/: main.cc
cpp/iterators/: main.cc
cpp/log4cplus/: Makefile  main.cc
cpp/magic_enum/: main.cpp
cpp/memcpy/: Makefile  main.cc
cpp/mkdir/: a.cc
cpp/mysql/: Makefile  main.cc
cpp/pretty_name/: Makefile  main.cc
cpp/pthread/: main.cc
cpp/ref-ref/: main.cc
cpp/round/: main.cc
cpp/segmentation-fault/: Makefile  main.cc
cpp/shared-ptr/: main.cc
cpp/sizeof/: main.cc
cpp/static-init/: Makefile  a.cc  a.h  b.cc
cpp/string-error/: main.cc
cpp/sysrepo/: Makefile  a.cc  legacy.cc
cpp/using-const/: main.cc
(+6 files in other folders)
